# icm20948

./: Cargo.toml  LICENSE-APACHE  README.md
src/: lib.rs
src/accel/: mod.rs  registers.rs
src/mag/: mod.rs  registers.rs
