[package]
name = "icm20948"
description = "TDK InvenSense ICM-20948 9-Axis IMU Driver"
version = "0.1.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
repository = "https://github.com/jessebraham/icm20948"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "icm20948",
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
embedded-hal = "0.2.3"
